...
            android:title="My Profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_google_maps_grey600_48dp"
            android:title="Map" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_variant_grey600_48dp"
            android:title="Logout" />
    </group>

    <item android:title="View">
        <menu>
            <item
                android:id="@+id/nav_requester"
                android:icon="@drawable/ic_circle_outline_grey600_48dp"
                android:title="My Tasks" />
            <item
                android:id="@+id/nav_assigned"
                android:icon="?android:attr/listChoiceIndicatorMultiple"
                android:title="My Assigned" />
...
                android:title="Notifications" />
            <item
                android:id="@+id/nav_starred"
                android:icon="@drawable/ic_star_outline_grey600_48dp"
                android:title="Starred" />
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/ic_google_circles_communities_grey600_48dp"
                android:title="All" />
        </menu>
    </item>
</menu>

