<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- edit -->
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_pencil_white_24dp"
        android:title="Edit"
        app:showAsAction="ifRoom" />

    <!-- delete -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="Delete"
        app:showAsAction="ifRoom" />

    <!-- star -->
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_star_outline_white_24dp"
        android:title="Star"
        app:showAsAction="ifRoom" />

</menu>